fixes footer on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -70,6 +70,10 @@ a li:hover{
 
 @media screen and (max-width: 400px){
   li{
-    font-size: 20px;
+    font-size: 15px;
+    margin: 0 2px;
+  }
+  ul {
+    margin-top: 15%;
   }
 }
